force-app/main/default/objects/copado__Quality_Gate_Test_From__mdt/copado__Quality_Gate_Test_From__mdt.object-meta.xml
<CustomObject>
    <label>Quality Gate Test From</label>
    <pluralLabel>Quality Gate Test From</pluralLabel>
</CustomObject>