force-app/main/default/objects/copado__Quality_Gate_Test_From__mdt/fields/copado__Available_Options__c.field-meta.xml
<CustomField>
    <fullName>copado__Available_Options__c</fullName>
    <label>Available Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>