force-app/main/default/objects/copado__Quality_Gate_Test_From__mdt/fields/copado__Default_Value__c.field-meta.xml
<CustomField>
    <fullName>copado__Default_Value__c</fullName>
    <label>Default Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Story</fullName>
                <default>true</default>
                <label>User Story</label>
            </value>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>