force-app/main/default/objects/copado__Quality_Gate_Test_From__mdt/fields/copado__Edit_Mode__c.field-meta.xml
<CustomField>
    <fullName>copado__Edit_Mode__c</fullName>
    <label>Edit Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Editable</fullName>
            </value>
            <value>
                <fullName>Read-Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>