force-app/main/default/objects/copado__Quality_Gate_Test_From__mdt/fields/copado__Info_Message__c.field-meta.xml
<CustomField>
    <fullName>copado__Info_Message__c</fullName>
    <label>Info Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>