force-app/main/default/objects/copado__Quality_Gate_Test_From__mdt/fields/copado__Is_Visible__c.field-meta.xml
<CustomField>
    <fullName>copado__Is_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Visible</label>
    <type>Checkbox</type>
</CustomField>